# PinscapePico

./: .gitignore  How-to-build.md  README.md
GUIConfigTool/: PinscapePicoAPI.h
GUIConfigToolQt/: CMakeLists.txt  MainWindow.cpp  MainWindow.h
HostAPI/: CMakeLists.txt  PinscapePicoAPI.cpp  PinscapePicoAPI.h  README.md
